# yaml-cpp-feedstock

./: .recipe_maintainers.json  README.md
.github/: CODEOWNERS
recipe/: bld_shared.bat  build-dyn.bat  build_shared.sh  build_static.sh  include_yaml-cpp_dll.h.patch  include_yaml-cpp_node_detail_node.h.patch  meta.yaml  recipe.yaml  yaml-cpp-config.cmake.in.patch
recipe/test/: CMakeLists.txt  test.bat
